replace `.collect(Collectors.toList())`, reorganize imports