@@ -32,7 +32,6 @@ import java.nio.file.Path;
 import java.util.*;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -224,7 +223,7 @@ public class ScriptDump extends MultiDump {
                         .map(TSDumpBase::writeTo)
                         .map(scriptPath::relativize)
                         .map(Path::toString)
-                        .collect(Collectors.toList())
+                        .toList()
                     )
                     .put("skipLibCheck", true)
                     .put("skipDefaultLibCheck", true)
